<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeItem"
        android:orderInCategory="0"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/searchItemHome"
        android:orderInCategory="1"
        android:title="@string/search"
        android:icon="@drawable/ic_search"/>
    <item
        android:id="@+id/favoriteItem"
        android:orderInCategory="2"
        android:title="@string/favorite"
        android:icon="@drawable/ic_star"/>
</menu>