<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.SearchMatchFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchEventRv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include layout="@layout/layout_loading"/>

    <include layout="@layout/layout_empty_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>