<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRv"
        android:layout_below="@+id/toolbar"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include layout="@layout/layout_loading"/>
</RelativeLayout>